--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.github.androidovshchik:BaseProject:2.1.0'
+    implementation "com.github.androidovshchik.AndroidBaseProject:core:$base_project_version"
+    implementation "com.github.androidovshchik.AndroidBaseProject:support:$base_project_version"
     implementation project(':vkbot')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
